# Interview

./: .gitignore  README.md  package.json  vercel.json
ai_models/: audio_analysis.py  gaze_detection.py  head_pose.py  multi_person.py  nlp_analysis.py
backend/: .env.example  main.py  pyproject.toml  requirements-local.txt  requirements-vercel.txt  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: schemas.py
backend/app/routes/: analysis.py  auth.py  interviews.py  websocket.py
backend/app/services/: auth_service.py  interview_service.py  report_service.py  trust_score_service.py  websocket_manager.py
backend/app/utils/: security.py
backend/scripts/: setup_database.py
database/: enable_realtime.sql  schema.sql  schema_v2.sql  setup.js
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/features/: page.tsx
frontend/src/app/interview/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: DashboardSidebar.tsx  DynamicIsland.tsx  EventTimeline.tsx  Navbar.tsx  TrustScoreGauge.tsx
frontend/src/hooks/: useBrowserMonitor.ts  useProctoring.ts  useSecurityLockdown.ts  useWebSocket.ts
frontend/src/lib/: api.ts  auth-service.ts  auth.tsx  demo.ts  env.ts  interview-session.ts  live-coding.ts  supabase.ts  types.ts  webrtc.ts
(+11 files in other folders)
