[project]
name = "app"
version = "0.1.0"
description = "InterviewGuard AI backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.19",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",
    "supabase==2.10.0",
    "reportlab==4.2.5",
    "numpy==1.26.4",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "aiofiles==24.1.0",
    "Pillow==11.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
